Version 3.8.0
- Added multiple assignments like (x,y) := (y,x)
- Added ability for functions to return multiple values
- Made the preprocessor work correctly with Mac encoded files (CR for
  end of line)
- Made fastspin -w work correctly in P2 mode
- if fastspin is named something ending with "spin2" (like
  "fastspin2") then it will start in Propeller2 mode by default
- simplified parsing of \ expressions

Version 3.7.2
- Updated P2 support to v32
- Fixed some bugs in common subexpression elimination
- Made the --nocse flag to spin2cpp actually work
- Fixed labels at end of input
- Fixed @result in assembly output

Version 3.7.1
- Fixed a nasty bug in assignment operators ("a[i++] += b" was being
  treated as "a[i++] = a[i++] + b", which is obviously wrong)

Version 3.7.0
- Added the -w flag to fastspin to allow creation of assembly language
  wrappers for Spin methods. See docs/SpinPasmIntegration.md for
  details.
- fastspin -O now removes hub bss variables (the VAR block) from the
  .binary; this does not change the actual memory usage at run time,
  but does result in a smaller .binary and hence faster download
- fastspin and spin2cpp no longer have to call themselves to compile
  the .pasm for a --asm binary output
- Better error messages for unexpected characters in the source
- Added strength reduction for multiplication and subtraction
- Convert more loops to use djnz
- Added simplified loop test for loops where the step value is
  constant
- Various other minor optimizations

Version 3.6.6
- Minor tweak to LMM return code
- Use bstc mode in fastspin only if the program name starts with bstc

Version 3.6.5
- Fixed asm output segmentation fault on Debian 64 bit

Version 3.6.4
- Fixed output of const symbols in gas mode
- Fix a hang with --dat --gas output
- In P2 mode, handle hub symbols more like PNut (so usually use byte
  address rather than long address).
- Fixed compilation of getnib, getbyte instructions in P2