@@ -6,6 +6,8 @@ Version 3.8.0
 - Made fastspin -w work correctly in P2 mode
 - if fastspin is named something ending with "spin2" (like
   "fastspin2") then it will start in Propeller2 mode by default
+- if no Spin methods are present, do not emit any of the Spin
+  initialization code, just output the DAT section 
 - simplified parsing of \ expressions
 
 Version 3.7.2
